[ADD] Primeira implementação de hash de senha, JWT e sistema completo de auth
